--- a/src/components/Sidebar/sidebar.module.scss
+++ b/src/components/Sidebar/sidebar.module.scss
@@ -53,10 +53,12 @@
     }
 }
 .buttonmenu{
-    background-color: #D9D9D9;
+    padding-top: 15px;
+    background-color: #c4c4c4;
 }
 .buttonmenu > button {
     height: fit-content;
+    
 }
 
 
