--- a/src/app/[locale]/exam/exam.module.scss
+++ b/src/app/[locale]/exam/exam.module.scss
@@ -5,7 +5,7 @@
         height: 100vh;
 
         .header {
-            border: 1px solid #00000080;
+            
             background-color: #D9D9D9;
             padding: 1.3rem;
 
@@ -79,12 +79,11 @@
     .sidebar {
         height: 100vh;
         background-color: #D9D9D9;
-        border: 1px solid #00000080;
         padding: 1rem;
         display: flex;
         justify-content: space-between;
         flex-direction: column;
-
+        border-left: solid 1px #000 ;
         .question_list {
             padding: 0 2rem;
         }
@@ -103,7 +102,24 @@
         }
     }
 }
-
+.question_list_2{
+    display: flex;
+    gap: 13px;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+}
+.popup{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.popup >button{
+    font-weight: 700;
+    background-color: #9F9D9F;
+    border-radius: 2rem;
+    height: 3.5rem;
+    width: 50%;
+}
 .question_item {
     height: 3.2rem;
     width: 2.4rem;
@@ -133,6 +149,18 @@
     &:hover {
         background-color: #92FD9D;
     }
+}
+
+.sidebar_toggle{
+    background: #C9CBCB;
+    border-radius: 14px;
+    height: 2.5rem;
+    border: 1px solid black;
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
 }
 @media (max-width: 767px) {
     .sidebar {
